Added buttons to identify districts

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html>
+<body>
 
+<h2>What Can JavaScript Do?</h2>
+
+<p>JavaScript can change HTML attribute values.</p>
+
+<p>In this case JavaScript changes the value of the src (source) attribute of an image.</p>
+
+<button onclick="document.getElementById('myImage').src='Corozal.png'">Corozal</button>
+<button onclick="document.getElementById('myImage').src='Orange-Walk.png'">Orange Walk</button>
+<button onclick="document.getElementById('myImage').src='Belize.png'">Belize</button>
+<button onclick="document.getElementById('myImage').src='Cayo.png'">Cayo</button>
+<button onclick="document.getElementById('myImage').src='Stann_Creek.png'">Stann Creek</button>
+<button onclick="document.getElementById('myImage').src='Toledo.png'">Toledo</button>
+
+<img id="myImage" src="Belize-Map.png" style="width:100px">
+
+
+
+</body>
+</html>
