Created CSS file and linked it in the head of the HTML file

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Links-->
+    <link rel="stylesheet" href="style.css">
+
+    <title>Districts of Belize</title>
+</head>
 <body>
+    
+<h2>Where are the Districts?</h2>
 
-<h2>What Can JavaScript Do?</h2>
-
-<p>JavaScript can change HTML attribute values.</p>
-
-<p>In this case JavaScript changes the value of the src (source) attribute of an image.</p>
+<p>Click on the buttons below to see each district</p>
 
 <button onclick="document.getElementById('myImage').src='Corozal.png'">Corozal</button>
 <button onclick="document.getElementById('myImage').src='Orange-Walk.png'">Orange Walk</button>
@@ -16,7 +23,6 @@
 <button onclick="document.getElementById('myImage').src='Toledo.png'">Toledo</button>
 
 <img id="myImage" src="Belize-Map.png" style="width:100px">
-
 
 
 </body>
