--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     
-<h2>Where are the Districts?</h2>
+<h2>Districts of Belize</h2>
 
 <p>Click on the buttons below to see each district</p>
 
