--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     
-<h2>Districts of Belize</h2>
+<h2>Learn the Districts of Belize</h2>
 
 <p>Click on the buttons below to see each district</p>
 
-
+<img id="myImage" src="Belize-Map.png">
 
 <div class="button-container">
 <button onclick="document.getElementById('myImage').src='Corozal.png'">Corozal</button>
@@ -26,8 +26,6 @@
 <button onclick="document.getElementById('myImage').src='Stann_Creek.png'">Stann Creek</button>
 <button onclick="document.getElementById('myImage').src='Toledo.png'">Toledo</button>
 </div>
-
-<img id="myImage" src="Belize-Map.png">
 
 
 </body>
